# Slime-OSWorld

./: LICENSE  README.md  pyproject.toml
configs/: .env.template  grpo_config.yaml
scripts/: train_grpo.sh
slime_osworld/: __init__.py  env.py  replay_buffer.py  reward.py  rollout.py
tools/: build_union_datasets.py  eval.py  osworld_env_server.py  prepare_tasks.py
