[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "slime-osworld"
version = "0.1.0"
description = "VLM training cookbook for OSWorld computer-use agents using slime"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "Jarrod Barnes" }]
dependencies = [
    "httpx>=0.24.0",
    "pillow>=10.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
train = [
    "slime @ git+https://github.com/THUDM/slime.git",
    "transformers>=4.40.0",
    "torch>=2.0.0",
]
tools = [
    "pandas>=2.0.0",
    "tqdm>=4.60.0",
]
dev = ["pytest>=7.0.0", "ruff>=0.1.0"]

[project.urls]
Repository = "https://github.com/jbarnes850/Slime-OSWorld"
